# patio

./: COPYING  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: multiplication-memory-broker-decorator.py
examples/memory/: multiplication-decorator.py  multiplication.py
examples/tcp/: multiplication-client-callee.py  multiplication-client-caller.py  multiplication-server-callee.py  multiplication-server-caller.py
examples/tcp/client-is-caller/: client.py  server.py
examples/tcp/server-is-caller/: client.py  server.py
patio/: __init__.py  compat.py  registry.py
patio/broker/: __init__.py  abc.py  memory.py  serializer.py
patio/broker/tcp/: __init__.py  base.py  broker.py  protocol.py
patio/executor/: __init__.py  asyncronous.py  base.py  null.py  process_pool.py  thread_pool.py
tests/: conftest.py  test_executor.py  test_memory_broker.py  test_registry.py
tests/tcp_broker/: conftest.py  test_restricted.py  test_tcp_broker.py
tests/tcp_broker/ssl/: CA.pem  client.key  client.pem  server.key  server.pem
