[tool.poetry]
name = "patio"
version = "0.1.0"
description = "Python Asynchronous Task for AsyncIO"
authors = ["Dmitry Orlov <me@mosquito.su>"]
license = "MIT"
readme = "README.md"
packages = [{include = "patio"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
aiomisc-pytest = "^1.1.1"
pytest = "^7.3.1"
pytest-subtests = "^0.11.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = [
    "patio",
    "tests",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
