[tool.poetry]
name = "patio"
version = "0.1.0"
description = "Python Asynchronous Task for AsyncIO"
authors = ["Dmitry Orlov <me@mosquito.su>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
packages = [
    {include = "patio"},
    {include = "patio/py.typed"},
]

[tool.poetry.dependencies]
python = "^3.8"
typing_extensions = [{ version = '*', python = "< 3.11" }]

[tool.poetry.group.dev.dependencies]
aiomisc-pytest = "^1.1.1"
pytest = "^7.3.1"
pytest-subtests = "^0.11.0"
pytest-cov = "^4.1.0"
mypy = "^1.3.0"
coveralls = "^3.3.1"
pylama = {extras = ["toml"], version = "^8.4.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = [
    "patio",
    "tests",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false


[tool.pylama]
max_line_length = 80
ignore="C901,E252"
skip = "*env*,.tox*,*build*,.*"

[tool.pylama.linter.mccabe]
max-complexity = 10
